остаось 7 тестов, ошибки в event